# quickLZ

./: CMakeLists.txt  build.sh
sample/: CMakeLists.txt
sample/compress/: CMakeLists.txt  stream_compress.c
sample/decompress/: CMakeLists.txt  stream_decompress.c
src/: CMakeLists.txt  quicklz.h
